change master data column name in yaml
