# modules/jet-process-backend/jet-process-rs/jet-process-rs-api/src/main/java/io/jetprocess/dto/v1_0/BasicHeadRsModel.java
@@ -71,20 +71,18 @@ public class BasicHeadRsModel implements Serializable {
 	protected String basicHeadCode;
 
 	@Schema
-	public Long getBasicHeadId() {
-		return basicHeadId;
+	public Long getId() {
+		return id;
 	}
 
-	public void setBasicHeadId(Long basicHeadId) {
-		this.basicHeadId = basicHeadId;
+	public void setId(Long id) {
+		this.id = id;
 	}
 
 	@JsonIgnore
-	public void setBasicHeadId(
-		UnsafeSupplier<Long, Exception> basicHeadIdUnsafeSupplier) {
-
+	public void setId(UnsafeSupplier<Long, Exception> idUnsafeSupplier) {
 		try {
-			basicHeadId = basicHeadIdUnsafeSupplier.get();
+			id = idUnsafeSupplier.get();
 		}
 		catch (RuntimeException re) {
 			throw re;
@@ -96,23 +94,21 @@ public class BasicHeadRsModel implements Serializable {
 
 	@GraphQLField
 	@JsonProperty(access = JsonProperty.Access.READ_WRITE)
-	protected Long basicHeadId;
+	protected Long id;
 
 	@Schema
-	public String getBasicHeadValue() {
-		return basicHeadValue;
+	public String getName() {
+		return name;
 	}
 
-	public void setBasicHeadValue(String basicHeadValue) {
-		this.basicHeadValue = basicHeadValue;
+	public void setName(String name) {
+		this.name = name;
 	}
 
 	@JsonIgnore
-	public void setBasicHeadValue(
-		UnsafeSupplier<String, Exception> basicHeadValueUnsafeSupplier) {
-
+	public void setName(UnsafeSupplier<String, Exception> nameUnsafeSupplier) {
 		try {
-			basicHeadValue = basicHeadValueUnsafeSupplier.get();
+			name = nameUnsafeSupplier.get();
 		}
 		catch (RuntimeException re) {
 			throw re;
@@ -124,7 +120,7 @@ public class BasicHeadRsModel implements Serializable {
 
 	@GraphQLField
 	@JsonProperty(access = JsonProperty.Access.READ_WRITE)
-	protected String basicHeadValue;
+	protected String name;
 
 	@Override
 	public boolean equals(Object object) {
@@ -167,26 +163,26 @@ public class BasicHeadRsModel implements Serializable {
 			sb.append("\"");
 		}
 
-		if (basicHeadId != null) {
+		if (id != null) {
 			if (sb.length() > 1) {
 				sb.append(", ");
 			}
 
-			sb.append("\"basicHeadId\": ");
+			sb.append("\"id\": ");
 
-			sb.append(basicHeadId);
+			sb.append(id);
 		}
 
-		if (basicHeadValue != null) {
+		if (name != null) {
 			if (sb.length() > 1) {
 				sb.append(", ");
 			}
 
-			sb.append("\"basicHeadValue\": ");
+			sb.append("\"name\": ");
 
 			sb.append("\"");
 
-			sb.append(_escape(basicHeadValue));
+			sb.append(_escape(name));
 
 			sb.append("\"");
 		}
